--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,38 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# --- Python 기본 ---
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+*.egg
+*.log
+
+# --- 가상환경 ---
+venv/
+env/
+.venv/
+ENV/
+
+# --- 환경 변수 / 보안 파일 ---
+.env
+.env.local
+config.json
+cookies.json
+last_id.txt
+
+# --- IDE / 에디터 관련 ---
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# --- 시스템 파일 ---
+.DS_Store
+Thumbs.db
+
+# --- 빌드 / 배포 ---
+build/
+dist/
+*.spec
+*.zip
